unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/CMPL123CME__Questionnaire_Items__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Items</label>
    <nameField>
        <displayFormat>QI-{00000}</displayFormat>
        <label>Questionnaire Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>