unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/fields/CMPL123CME__Decision_Level__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Decision_Level__c</fullName>
        <description>To maintain the internal order of saving the questions.</description>
        <label>Decision Level</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>