unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/fields/CMPL123CME__Parent_Key_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Parent_Key_Value__c</fullName>
        <label>Parent Key Value</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>