unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/fields/CMPL123CME__Question__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Question__c</fullName>
        <label>Question</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>