unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/fields/CMPL123CME__Question_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Question_No__c</fullName>
        <label>Question No</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>