unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/fields/CMPL123CME__Questionnaire__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Questionnaire__c</fullName>
        <label>Questionnaire</label>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaire Items</relationshipLabel>
        <relationshipName>Questionnaire_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>