unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/fields/CMPL123CME__Questions_Template_Item__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Questions_Template_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questions Template Item</label>
        <referenceTo>CMPL123CME__Questions_Template_Item__c</referenceTo>
        <relationshipLabel>Questionnaire Items</relationshipLabel>
        <relationshipName>Questionnaire_Items</relationshipName>
        <type>Lookup</type>
    </CustomField>