unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/fields/CMPL123CME__Score__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Score__c</fullName>
        <formula>IF( ISPICKVAL( CMPL123CME__Answer__c , 'N/A') || ISPICKVAL(CMPL123CME__Answer__c , 'No') || ISBLANK( TEXT(CMPL123CME__Answer__c) ) ,  CMPL123CME__Weight__c * 0,  CMPL123CME__Weight__c *1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>