unpackaged/main/default/objects/CMPL123CME__Questionnaire_Items__c/validationRules/CMPL123CME__Test.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Test</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(CMPL123CME__Answer__c)  = 'Yes'</errorConditionFormula>
        <errorMessage>Sorry!</errorMessage>
    </ValidationRule>